--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,7 @@ dependencies {
 
     //스프링 시큐리티
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
+
+    //jdbc 추가
+    implementation('org.springframework.session:spring-session-jdbc')
 }
