--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,17 @@
 spring.security.oauth2.client.registration.google.client-id=9215626384-1l0ss1d1qvg58itvos8dh6n0flheuh9g.apps.googleusercontent.com
-\spring.security.oauth2.client.registration.google.client-secret=A7OfdcbTEiBsD9RoZGRH1z-K
-spring.security.oauth2.client.registration.google.client-scope=profile,email
+spring.security.oauth2.client.registration.google.client-secret=A7OfdcbTEiBsD9RoZGRH1z-K
+spring.security.oauth2.client.registration.google.scope=profile,email
+
+#네이버 로그인 registration
+spring.security.oauth2.client.registration.naver.client-id=in2FqQHwhqC9ru8a_CNl
+spring.security.oauth2.client.registration.naver.client-secret=JhfpchwFMA
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# provider
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
