기존 테스트에 시큐리티 적용하기

--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,7 @@ dependencies {
 
     //jdbc 추가
     implementation('org.springframework.session:spring-session-jdbc')
+
+    //스프링 시큐리티 테스트
+    testCompile("org.springframework.security:spring-security-test")
 }
